<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">爬小说</string>
    <string name="settings">设置</string>
    <string name="loading">加载中…%s</string>
    <string name="site_list">网站列表</string>
    <string name="novel_chapters">小说章节</string>
    <string name="browse">浏览</string>
    <string name="novel_not_support">阅读失败或者不支持该小说</string>
    <string name="bookshelf">书架</string>
    <string name="text_size">字体大小</string>
    <string name="font">字体</string>
    <string name="text_size_placeholders">%dsp</string>
    <string name="line_spacing_placeholder">%ddp</string>
    <string name="line_spacing">行间距</string>
    <string name="paragraph_spacing_placeholder">%ddp</string>
    <string name="paragraph_spacing">段间距</string>
    <string name="background_image">背景图</string>
    <string name="background_color_placeholder">0x%08X</string>
    <string name="background_color">背景色</string>
    <string name="text_color_placeholder">0x%08X</string>
    <string name="text_color">文字色</string>
    <string name="refresh">刷新</string>
    <string name="history">历史</string>
    <string name="downloading_from_current_chapter_placeholder">从当前章节(%d)开始下载</string>
    <string name="downloading_placeholder">下载中 已存在%d章 下载%d章 失败%d章 剩余%d章</string>
    <string name="download_complete_placeholder">下载完成 已存在%d章 下载%d章 失败%d章</string>
    <string name="chapter_downloading_placeholder">下载中: %d.%s %d/%d</string>
    <string name="chapter_download_complete_placeholder">下载完成: %d.%s</string>
    <string name="chapter_download_error_placeholder">下载失败: %d.%s, %s</string>
    <string name="read_at">阅读至</string>
    <string name="last_chapter">最新章</string>
    <string name="history_count">历史记录数</string>
    <string name="title_activity_settings">设置</string>
    <string name="pref_header_general">全局设置</string>
    <string name="pref_header_list">列表设置</string>
    <string name="pref_header_read">阅读设置</string>
    <string name="pref_backup">备份</string>
    <string name="pref_others">杂项</string>
    <string name="pref_cache_clear">清除缓存</string>
    <string name="pref_clear">清除</string>
    <string name="pref_header_change_log">更新日志</string>
    <string name="pref_header_about">关于</string>
    <string name="pref_header_disclaimer">免责声明</string>
    <string name="download_thread_count">下载线程数</string>
    <string name="contents">目录</string>
    <string name="search">搜索</string>
    <string name="title_activity_fuzzy_search">@string/fuzzy_search</string>
    <string name="refine_search">精确搜索</string>
    <string name="fuzzy_search">模糊搜索</string>
    <string name="action">操作</string>
    <string name="read_continue">继续阅读</string>
    <string name="read_last_chapter">阅读最新章</string>
    <string name="detail">详情</string>
    <string name="remove">删除</string>
    <string name="rename">重命名</string>
    <string name="share">分享</string>
    <string name="typesetting">排版</string>
    <string name="margin_value_placeholder">%d%%</string>
    <string name="margin_name_placeholder">%s间距</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="top">上</string>
    <string name="bottom">下</string>
    <string name="left_spacing">左间距</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="book_list">书单</string>
    <string name="add_from">从何处添加</string>
    <string name="add">添加</string>
    <string name="open_source_licenses">开源许可</string>
    <string name="library">库</string>
    <string name="ad_enabled">展示广告</string>
    <string name="full_screen_delay">全屏延迟(ms)</string>
    <string name="back_press_out_of_fullScreen">返回键退出全屏</string>
    <string name="donate">捐赠</string>
    <string name="jump_to_we_chat">跳到微信</string>
    <string name="explain">Q&amp;A</string>
    <string name="cache">缓存</string>
    <string name="confirm_clear">确认清除</string>
    <string name="removing">正在清除…%s</string>
    <string name="chapter_color_default">默认章节颜色</string>
    <string name="chapter_color_cached">已缓存章节颜色</string>
    <string name="chapter_color_read_at">当前章节颜色</string>
    <string name="scan">扫一扫</string>
    <string name="animation">动画</string>
    <string name="simple">简单</string>
    <string name="simulation">仿真</string>
    <string name="cover">覆盖</string>
    <string name="slide">滑动</string>
    <string name="none">无</string>
    <string name="scroll">滚动</string>
    <string name="animation_speed">动画速度</string>
    <string name="animation_speed_placeholder">*%.2f</string>
    <string name="select_font">选择字体？</string>
    <string name="set_default">恢复默认</string>
    <string name="uploading">上传中…</string>
    <string name="add_book_list">添加书单</string>
    <string name="book_list_downloading">书单下载中…</string>
    <string name="open">打开</string>
    <string name="judging">判断中…</string>
    <string name="red_dot_size">小红点大小</string>
    <string name="red_dot_color">小红点颜色</string>
    <string name="full_screen_click_next_page">全屏点击翻下页</string>
    <string name="volume_key_scroll">音量键翻页</string>
    <string name="center_percent">中心比例</string>
    <string name="time">时间</string>
    <string name="battery">电池</string>
    <string name="pagination">页码</string>
    <string name="book_name">书名</string>
    <string name="chapter_name">章节名</string>
    <string name="display">显示</string>
    <string name="message_size">信息字体大小</string>
    <string name="message_size_4">信息字大</string>
    <string name="date_format">时间格式</string>
    <string name="button_decrease">-</string>
    <string name="button_increase">+</string>
    <string name="book_list_share_expiration">书单分享期限</string>
    <string name="day">一天</string>
    <string name="month">一月</string>
    <string name="year">一年</string>
    <string name="report_crash">上报崩溃</string>
    <string name="picker">选择器</string>
    <string name="colorARGB">颜色ARGB</string>
    <string name="subscript">订阅</string>
    <string name="export">导出</string>
    <string name="backup">备份</string>
    <string name="sImport">导入</string>
    <string name="error">错误</string>
    <string name="close">关闭</string>
    <string name="removeCookies">删除Cookies</string>
    <string name="message_cookies_removed">已删除cookies，</string>
    <string name="success">成功</string>
    <string name="warning">警告</string>
    <string name="downgrade_warning_placeholder">已降级，从"%s"到"%s",</string>
    <string name="migrating_title">正在迁移旧版数据</string>
    <string name="migrate_error_title">迁移旧版数据失败</string>
    <string name="migrating_message_placeholder">从"%s"到"%s",\n迁移内容：%s</string>
    <string name="migrate_error_message_placeholder">@string/migrating_message_placeholder</string>
    <string name="ignore">忽略</string>
    <string name="title_more_action">选择操作</string>
    <string name="remove_bookshelf">移出书架</string>
    <string name="add_bookshelf">加入书架</string>
    <string name="refresh_chapters">刷新章节</string>
    <string name="auto_refresh_interval">自动刷新间隔(s)</string>
    <string name="last_refresh_time">上次刷新</string>
    <string name="open_detail">打开详情页</string>
    <string name="more_action">更多操作</string>
    <string name="pinned_bookshelf">书架置顶</string>
    <string name="cancel_pinned">取消置顶</string>
    <string name="settings_bookshelf">书架设置</string>
    <string name="settings_click_action">点击事件设置</string>
    <string name="settings_click_red_dot">点击小红点</string>
    <string name="settings_long_click_red_dot">长按小红点</string>
    <string name="settings_click_refresh_time">点击刷新时间</string>
    <string name="settings_click_name">点击小说名</string>
    <string name="settings_long_click_name">长按小说名</string>
    <string name="settings_click_last_chapter">点击最新章节</string>
    <string name="settings_click_whole_item">点击整体</string>
    <string name="settings_long_click_whole_item">长按整体</string>
    <string name="feedback">反馈：</string>
    <string name="removing_bookshelf">正在从书架移除</string>
    <string name="remove_bookshelf_complete">移出书架成功</string>
    <string name="add_bookshelf_complete">加入书架成功</string>
    <string name="settings_view">视图设置</string>
    <string name="grid_view">格子视图</string>
    <string name="large_view">大型视图</string>
    <string name="brightness">亮度</string>
    <string name="follow_system">跟随系统</string>
    <string name="automatic">自动</string>
    <string name="keep_screen_on">保持屏幕长亮</string>
    <string name="notify_has_update_title_placeholder">《%s》有更新</string>
    <string name="auto_save_read_status_second">自动保存阅读进度(s)</string>
    <string name="download_chapters_count">下载章节数</string>
    <string name="all">全部</string>
    <string name="cookie">Cookie</string>
    <string name="notify_server_address">服务器地址</string>
    <string name="notify_novel_update">通知小说更新</string>
    <string name="notify_novel_update_summary">收到小说更新推送时是否弹出通知小说更新，</string>
    <string name="download_chapters_count_summary">-1为每次询问，0为剩下全部，</string>
    <string name="history_count_summary">只是展示的历史记录数限制，由于没有分页，一次展示太多可能影响性能，</string>
    <string name="no_file_explorer">没有文件管理器，</string>
    <string name="open_in_browser">在浏览器打开</string>
    <string name="pref_header_server">服务设置</string>
    <string name="ask_update">询问更新</string>
    <string name="ask_update_summary">没有手动刷新时询问服务器是否有更新，并更新“上次刷新”为服务器上的时间，\n可以看情况减少手动刷新频率，但如果效果不好也可能因频繁询问服务器而多费流量，</string>
    <string name="single_notification">只保留一个通知</string>
    <string name="single_notification_summary">更新推送的通知只保留最后一个，</string>
    <string name="notify_pinned_only">只通知置顶小说</string>
    <string name="notify_pinned_only_summary">更新通知只限置顶的小说，</string>
    <string name="search_thread_count">搜索线程数</string>
    <string name="select_color_scheme">选择配色</string>
    <string name="input">输入</string>
    <string name="dot_notify_update">小红点提示有更新</string>
    <string name="dot_notify_update_summary">是则提示刷出更新的时间在阅读时间之后， 否则提示阅读进度没到最新章节</string>
    <string name="optimization_read">优化阅读</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="pinned">置顶</string>
    <string name="select">选择</string>
    <string name="local_novel">本地小说</string>
    <string name="main_open_hint">输入小说详情页地址或分享的书单地址，</string>
    <string name="local_novel_importing">正在导入本地小说…</string>
    <string name="clean_cache">清除缓存</string>
    <string name="clean_this_novel">清除小说</string>
    <string name="file_type">文件类型</string>
    <string name="file_charset">文件编码</string>
    <string name="author">作者名</string>
    <string name="name">小说名</string>
    <string name="input_placeholder">请输入%s</string>
    <string name="select_placeholder">请选择%s</string>
    <string name="select_item_text">.txt纯文本小说</string>
    <string name="select_item_epub">.epub格式电子书</string>
    <string name="segment_indentation">段首缩进</string>
    <string name="exporting_title_placeholder">正在导出《%s》</string>
    <string name="export_title_complete_placeholder">导出《%s》完成</string>
    <string name="auto_download_chapters_count">自动下载章节数</string>
    <string name="auto_download_chapters_count_summary">书架小说刷新章节列表后如果新增章节数小于等于该值就自动缓存新章节，</string>
    <string name="pref_header_download">下载设置</string>
    <string name="download_progress">下载进度通知</string>
    <string name="download_progress_summary">下载进度用通知方式展示进度，</string>
    <string name="download_thread_progress">下载线程进度通知</string>
    <string name="download_thread_progress_summary">下载中线程的进度用通知方式展示进度，</string>
    <string name="pref_header_location">路径设置</string>
    <string name="settings_cache_location">缓存路径</string>
    <string name="settings_cache_location_summary">小说章节正文等各种缓存的所在路径，重启生效，</string>
    <string name="settings_backup_location">备份路径</string>
    <string name="settings_backup_location_summary">备份数据页面提供的默认路径，</string>
    <string name="settings_export_location">导出路径</string>
    <string name="settings_export_location_summary">导出小说所在的路径，</string>
    <string name="header">Header</string>
    <string name="site_charset">网站编码</string>
    <string name="tip_stop_upkeep">停止维护</string>
</resources>