<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.ListPreferenceFragment"
        android:title="@string/pref_header_list" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.ReaderPreferenceFragment"
        android:title="@string/pref_header_read" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.DownloadPreferenceFragment"
        android:title="@string/pref_header_download" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.LocationPreferenceFragment"
        android:title="@string/pref_header_location" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.ServerPreferenceFragment"
        android:title="@string/pref_header_server" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.OthersPreferenceFragment"
        android:title="@string/pref_others" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.CacheClearPreferenceFragment"
        android:title="@string/pref_clear" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.DisclaimerFragment"
        android:title="@string/pref_header_disclaimer" />

    <header
        android:fragment="cc.aoeiuv020.panovel.settings.AboutFragment"
        android:title="@string/pref_header_about" />

</preference-headers>
