<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <cc.aoeiuv020.panovel.settings.IntEditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:key="historyCount"
        android:maxLines="1"
        android:defaultValue="30"
        android:summary="@string/history_count_summary"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/history_count" />

    <cc.aoeiuv020.panovel.settings.IntEditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:defaultValue="4"
        android:key="downloadThreadsLimit"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/download_thread_count" />

    <cc.aoeiuv020.panovel.settings.IntEditTextPreference
        android:capitalize="words"
        android:defaultValue="-1"
        android:inputType="number|numberSigned"
        android:key="downloadCount"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/download_chapters_count_summary"
        android:title="@string/download_chapters_count" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifyNovelUpdate"
        android:summary="@string/notify_novel_update_summary"
        android:title="@string/notify_novel_update" />

    <SwitchPreference
        android:defaultValue="true"
        android:enabled="false"
        android:key="adEnabled"
        android:title="@string/ad_enabled" />

</PreferenceScreen>
