<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cc.aoeiuv020.panovel.main.MainActivity">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/browse"
        android:title="@string/browse"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="never" />
    <item
        android:id="@+id/explain"
        android:title="@string/explain"
        app:showAsAction="never" />
</menu>
