<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_close"
        android:title="@string/close"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_open"
        android:title="@string/open"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/browse"
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/open_in_browser"
        app:iconTint="@android:color/white"
        app:showAsAction="never" />

    <item
        android:id="@+id/removeCookies"
        android:title="@string/removeCookies"
        app:showAsAction="never" />

</menu>