<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <RadioButton
        android:id="@+id/rbSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/simple"
        android:textColor="@android:color/primary_text_dark" />

    <RadioButton
        android:id="@+id/rbSimulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/simulation"
        android:textColor="@android:color/primary_text_dark" />

    <RadioButton
        android:id="@+id/rbCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/cover"
        android:textColor="@android:color/primary_text_dark" />

    <RadioButton
        android:id="@+id/rbSlide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/slide"
        android:textColor="@android:color/primary_text_dark" />

    <RadioButton
        android:id="@+id/rbNone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/none"
        android:textColor="@android:color/primary_text_dark" />

    <RadioButton
        android:id="@+id/rbScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/scroll"
        android:textColor="@android:color/primary_text_dark" />
</RadioGroup>
