<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.SiteSettingsActivity">


    <LinearLayout
        android:id="@+id/llStopUpkeep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textWarning"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvStopUpkeep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_stop_upkeep"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCookie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cookie"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCharset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCharset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site_charset"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>