<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvMarginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:singleLine="true"
        android:textColor="@android:color/primary_text_dark"
        tools:text="@string/left_spacing" />

    <TextView
        android:id="@+id/tvDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxEms="2"
        android:minEms="2"
        android:textSize="@dimen/reader_settings_text_size"
        android:text="@string/button_decrease"
        android:textColor="@android:color/primary_text_dark" />

    <SeekBar
        android:id="@+id/sbMargin"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:max="101" />

    <TextView
        android:id="@+id/tvIncrease"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:maxEms="2"
        android:minEms="2"
        android:textSize="@dimen/reader_settings_text_size"
        android:layout_height="wrap_content"
        android:text="@string/button_increase"
        android:textColor="@android:color/primary_text_dark" />

    <TextView
        android:id="@+id/tvMarginValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:maxEms="3"
        android:minEms="3"
        android:singleLine="true"
        android:textColor="@android:color/primary_text_dark"
        tools:text="0%" />

</LinearLayout>
